--- a/Drinks2u_v1/app/src/main/res/values/strings.xml
+++ b/Drinks2u_v1/app/src/main/res/values/strings.xml
@@ -17,4 +17,9 @@
     <string name="text_wel">Bienvenido</string>
     <string name="txt_wel">Bienvenido</string>
     <string name="des">TODO</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="add">Añadir</string>
+    <string name="search">Buscar</string>
 </resources>
