--- a/Drinks2u_v1/app/src/main/res/values/strings.xml
+++ b/Drinks2u_v1/app/src/main/res/values/strings.xml
@@ -22,8 +22,10 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="add">Añadir</string>
     <string name="search">Buscar</string>
-    <string name="card_title">Ejemplo</string>
+    <string name="card_title">Ejemplo Titulo</string>
     <string name="card_content">Esto contiene el contenido de todo lo que llevara la descripción  del producto.</string>
     <string name="action_view">Detalles</string>
     <string name="action_carrito">Agregar a Carrito</string>
+    <string name="comprar">Compra Directa</string>
+    <string name="comprar">Compra Directa</string>
 </resources>
